--- a/biome.json
+++ b/biome.json
@@ -3,11 +3,11 @@
   "files": {
     "includes": [
       "**/src/**/*.{js,jsx,ts,tsx,json}",
-      "!**/node_modules/**",
-      "!**/dist/**",
-      "!**/build/**",
-      "!**/.next/**",
-      "!**/coverage/**"
+      "!**/node_modules",
+      "!**/dist",
+      "!**/build",
+      "!**/.next",
+      "!**/coverage"
     ]
   },
   "formatter": {
@@ -24,7 +24,8 @@
     "rules": {
       "recommended": true,
       "correctness": {
-        "noUnusedVariables": "error"
+        "noUnusedVariables": "error",
+        "useUniqueElementIds": "off"
       },
       "style": {
         "noNonNullAssertion": "warn",
