--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "format": "biome format --write src",
+    "format:check": "biome format src",
+    "lint": "biome check src",
+    "lint:fix": "biome check --apply src"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -36,6 +40,7 @@
     "zod": "^4.1.9"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.2.4",
     "@tauri-apps/cli": "^2",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.8",
