--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "format": "biome format --write src",
     "format:check": "biome format src",
     "lint": "biome check src",
-    "lint:fix": "biome check --apply src"
+    "lint:fix": "biome check --write src",
+    "format:all": "biome format --write .",
+    "lint:all": "biome check .",
+    "code:check": "biome check --write . && biome format --write ."
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
