--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-form": "^1.23.0",
+    "@tanstack/react-query": "^5.89.0",
+    "@tanstack/react-query-devtools": "^5.89.0",
     "@tanstack/zod-form-adapter": "^0.42.1",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
