--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tauri-apps/plugin-sql": "^2.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.18",
     "lucide-react": "^0.544.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
