--- a/package.json
+++ b/package.json
@@ -14,29 +14,39 @@
     "lint:fix": "biome check --write src",
     "format:all": "biome format --write .",
     "lint:all": "biome check .",
-    "code:check": "biome check --write . && biome format --write ."
+    "code:check": "biome check --write . && biome format --write .",
+    "populate-test-data": "bun run scripts/populate-test-data.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-form": "^1.23.0",
     "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-query-devtools": "^5.89.0",
+    "@tanstack/react-table": "^8.21.3",
     "@tanstack/zod-form-adapter": "^0.42.1",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-sql": "^2.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
     "lucide-react": "^0.544.0",
+    "nuqs": "^2.6.0",
     "react": "^19.1.0",
+    "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.63.0",
     "react-router-dom": "^7.9.1",
@@ -47,6 +57,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
     "@tauri-apps/cli": "^2",
+    "@types/bun": "^1.2.22",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
